--- a/index.html
+++ b/index.html
@@ -8,23 +8,19 @@
 </head>
 
 <body>
+    <!--Header Section-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+            <a href="#online-reputation-management">Online Reputation Management</a>
+            <a href="#social-media-marketing">Social Media Marketing</a>
         </nav>
     </header>
+
     <section class="hero"></section>
+
+    <!--Main Section-->
     <main class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO - Search Engine Optimization"/>
@@ -71,6 +67,8 @@
             </p>
         </section>
     </aside>
+
+    <!--Footer Section-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
