updated comment in html, updated README, fixed css to less line of code

--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 
 <head>
     <meta charset="UTF-8" />
+    <!--Added a Meta Tag-->
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name="Horiseon Website" content="Refactor this website to meet all the acceptance criteria. Change all non-semantic 
+        tag to semantic tag. Fixed the CSS to match the html tag.">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon | Search Engine Optimization</title>
 </head>
 
 <body>
-    <!--Header Section-->
+
+    <!--Change div to header tag-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+
+        <!--Change div to nav tag-->
         <nav>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
             <a href="#online-reputation-management">Online Reputation Management</a>
@@ -18,9 +25,10 @@
         </nav>
     </header>
 
+    <!--Change div to section tag-->
     <section class="hero"></section>
 
-    <!--Main Section-->
+    <!--Change div to main tag-->
     <main class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO - Search Engine Optimization"/>
@@ -44,22 +52,26 @@
             </p>
         </section>
     </main>
+
+    <!--Change div to aside tag-->
     <aside class="benefits">
-        <section class="benefit-lead">
+
+        <!--Change class to one class for all section below-->
+        <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Leading arrow that points to money symbol"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="A light bulb on a person body"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="A gear symbol with money symbol around it"/>
             <p>
@@ -68,7 +80,7 @@
         </section>
     </aside>
 
-    <!--Footer Section-->
+    <!--Change div to footer tag-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
