--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
 
     <!--Change div to main tag-->
     <main class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
+
+        <!--Change class to one class for section below-->
+        <section id="search-engine-optimization" class="content-section">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO - Search Engine Optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="content-section">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person holding a phone and looking at charts on a computer"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="content-section">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Bubble letter that say tweets, like, media, and social media marketing related icon"/>
             <h2>Social Media Marketing</h2>
             <p>
