Change some html comment

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!--Change div to main tag-->
     <main class="content">
 
-        <!--Change class to one class for section below-->
+        <!--Change div to section tag and change class to one class name for section below-->
         <section id="search-engine-optimization" class="content-section">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO - Search Engine Optimization"/>
             <h2>Search Engine Optimization</h2>
@@ -58,7 +58,7 @@
     <!--Change div to aside tag-->
     <aside class="benefits">
 
-        <!--Change class to one class for all section below-->
+        <!--Change div to section tag and change class to one class name for section below-->
         <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Leading arrow that points to money symbol"/>
