--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
         <!--Change div to section tag and change class to one class name for section below-->
         <section id="search-engine-optimization" class="content-section">
+
+            <!--Added alt attribute to all images-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO - Search Engine Optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
